[package]
name = "pumpkin"
version = "0.2.0"
authors = ["Zach Dziura <zcdziura@gmail.com>"]
description = "A cryptographically secure prime number generator"
repository = "https://github.com/zcdziura/pumpkin"
keywords = ["prime", "number", "cryptography", "generator"]
license = "Unlicense/MIT"

[dependencies]
custom_derive = "0.1.*"
newtype_derive = "0.1.*"
ramp = "0.2.*"
rand = "0.3.*"

[lib]
name = "pumpkin"
path = "src/lib.rs"

[features]
unstable = []
