[package]
name = "pumpkin"
version = "2.0.1"
authors = ["Zach Dziura <zcdziura@gmail.com>"]
description = "A cryptographically secure prime number generator"
repository = "https://github.com/zcdziura/pumpkin"
homepage = "https://zcdziura.github.io/pumpkin/pumpkin"
keywords = ["prime", "number", "cryptography", "generator"]
license = "Unlicense/MIT"
readme = "README.md"

[dependencies]
clippy = {version = "0.0.*", optional = true}
custom_derive = "0.1"
newtype_derive = "0.1"
ramp = "0.5"
rand = "0.6"

[lib]
name = "pumpkin"
path = "src/lib.rs"
doctest = false

[features]
dev = ["clippy"]
unstable = []
